fix: monaco editor font alignment

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -112,3 +112,7 @@ svg {
     }
   }
 }
+
+.monaco-editor * {
+  font-family: $jetbrains;
+}
